--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,25 @@
 </head>
 <body>
 
+
+
+<% flash.each do |type, content| %>
+    <% if content.respond_to?('each') 
+        content.each do |item| %>
+            <%= render 'layouts/alert', 
+                type: type,
+                content: item %>
+        <% end %>
+    <% else %>
+        <%= render 'layouts/alert', 
+                type: type,
+                content: content %>
+    <% end %>
+
+<% end %>
+
+
+
 <%= yield %>
 
 </body>
