--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1>Marko Manojlovic [logo]</h1>
+            <h3>Since 1984</h3>
+        </div><!-- col-md-12 text-center -->
+    </div><!-- row -->
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <hr>
+        </div><!-- col-md-6 col-md-offset-3 -->
+    </div><!-- row -->
+    <div class="row">
+        <div class="col-md-12">
+            <h3>From the blog</h3>
+            <% @posts.each do |post| %>
+                <h4><%= post.title %></h4>
+                <p><%= post.body %></p>
+            <% end %>
+        </div>
+    </div>
+</div><!-- container -->
