--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,12 +11,17 @@
         </div><!-- col-md-6 col-md-offset-3 -->
     </div><!-- row -->
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4">
             <h3>From the blog</h3>
-            <% @posts.each do |post| %>
-                <h4><%= post.title %></h4>
-                <p><%= post.body %></p>
-            <% end %>
         </div>
+    </div>
+    <div class="row">
+        <% @posts.each do |post| %>
+            <div class="col-md-4">
+                <h4><%= post.title %></h4>
+                <%= image_tag post.post_image.thumb.url, class: "img-responsive" %>
+            </div>        
+        <% end %>
+        
     </div>
 </div><!-- container -->
