--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :body %>
+    <%= f.file_field :post_image %>
     <%= f.collection_select :category_id, Category.all, :id, :name %>
   </div>
 
