friendly_id to categories

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%# app/views/categories/show.html.erb %>
+<% @category.posts.each do |post| %>
+  <li><%= link_to post.title, post_path(post) %></li>
+<% end %>
