--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,8 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+         <h2><%= link_to post.title, post %></h2>
+    <p><%= link_to post.category.try(:name), post.category %></p>
         <td><%= post.title %></td>
         <td><%= post.body %></td>
         <td><%= post.category && post.category.name %></td>
@@ -29,3 +31,5 @@
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+
+
