--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<h2><%= @post.title %></h2>
+Category: <%= link_to @post.category.name, category_path(@post.category) %>
 
 <p>
   <strong>Title:</strong>
