--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@ Category: <%= link_to @post.category.name, category_path(@post.category) %>
 
 <p>
   <strong>Body:</strong>
-  <%= @post.body %>
+  <%= @post.body.html_safe %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
