modified views for adding new post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,10 @@
                 type: type,
                 content: content %>
     <% end %>
-
 <% end %>
 
 
-
+<%= render 'layouts/nav' %>
 <%= yield %>
 
 </body>
