--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,15 +1,21 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <h1>Marko Manojlovic [logo]</h1>
-            <h3>Since 1984</h3>
-        </div><!-- col-md-12 text-center -->
-    </div><!-- row -->
+    <div class="jumbotron">
+        <h1><%= image_tag 'rostilj.jpg', class: "img-rounded img-responsive", style: "width: 260px; margin: 0px auto;"%></h1>
+        <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div><!-- jumbotron -->
+</div><!-- container-fluid -->
+    
+<div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <hr>
         </div><!-- col-md-6 col-md-offset-3 -->
     </div><!-- row -->
+        <div class="highlight"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;p</span> <span class="na">style=</span><span class="s">&quot;float:right; border: 2px solid #eee;&quot;</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;b&gt;</span>Computers are useless. They can only give you answers.<span class="nt">&lt;/b&gt;&lt;/br&gt;</span>
+      <span class="nt">&lt;b&gt;&lt;i&gt;</span>— Pablo Picasso<span class="nt">&lt;/i&gt;&lt;/b&gt;</span>
+    <span class="nt">&lt;/p&gt;</span></code></pre></div>
     <div class="row">
         <div class="col-md-4">
             <h3>From the blog</h3>
