--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,14 +1,16 @@
 <%= simple_form_for(@post) do |f| %>
-  <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :body, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'Full'} } %>
+    <%= f.label "Add Post Image" %>
     <%= f.file_field :post_image %>
+    <br>
+    <%= f.label "Choose a Category" %>
     <%= f.collection_select :category_id, Category.all, :id, :name %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-success btn-lg" %>
   </div>
 <% end %>
