--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,35 +1,49 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Post Category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-         <h2><%= link_to post.title, post %></h2>
-        <p><%= link_to post.category.try(:name), post.category %></p>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= post.category && post.category.name %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Yes, I am writing about stuff.</h1>
+      <%= link_to 'New Post', new_post_path, class: "btn btn-success" if user_signed_in? %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <hr>
+    </div>
+  </div><!-- row -->
+  </div>
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-10">
+      <% @posts.each do |post| %>
+      <div class="col-md-4">
+      <h4>
+        <%= link_to post.title, post %> 
+          <% if user_signed_in? %>
+            [ <%= link_to 'Edit', edit_post_path(post), class: "label label-warning" %>
+            <%= link_to 'Delete', post, method: :delete, class: "label label-danger", data: { confirm: 'Are you sure?' } %> ]
+          <% end %>
+      </h4>
+      
+      <small>Category: <%= link_to post.category.try(:name), post.category %></small>
+      <%= image_tag post.post_image.thumb.url, class: "img-responsive" %>
+      </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+    <div class="col-md-2">
+      <div class="well well-lg">
+        <h3>Categories</h3>
+      <% @categories.each do |category| %>
+        <p><%= link_to category.name, category %></p>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div><!-- container -->
 
-<br>
 
-<%= link_to 'New Post', new_post_path %>
+        
+
+
+
 
 
