--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Post</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>New Post</h1>
+            <%= render 'form' %>
+            <br>
+            <%= link_to 'Cancel', posts_path, class: "btn btn-danger btn-xs" %>
+        </div>
+    </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+
+
+
+
+
