prepared for heroku

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,27 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <%= image_tag 'hipster.jpg', class: "img-responsive" %>
+            <small>Fake hipster glasses, trying to look smarter... #lame</small>
+        </div><!-- col-md-4 -->
+        <div class="col-md-8">
+            <h1>About Me</h1>
+            <h4>Skills:</h4>
+            <p><em>Having fun!</em>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar" style="width: 100%"></div>
+                </div>
+            </p>
+            <p><em>Football/Soccer</em>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar" style="width: 100%"></div>
+                </div>
+            </p>
+            <p><em>Somethjing</em>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar" style="width: 100%"></div>
+                </div>
+            </p>
+        </div>
+    </div>
+</div>
