--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,22 @@
-<h2><%= @post.title %></h2>
-Category: <%= link_to @post.category.name, category_path(@post.category) %>
-
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body.html_safe %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <%= link_to 'Edit', edit_post_path(@post) if user_signed_in? %>
+      <h1><%= @post.title %></h1>
+      <small>Category: <%= link_to @post.category.name, category_path(@post.category) %></small>
+      <hr>
+      <%= image_tag @post.post_image.full.url, class: "img-responsive" %>
+      <div style="margin-top: 70px">
+        <p><%= @post.body.html_safe %></p>
+      </div>
+    </div><!-- col-md-10 -->
+    <div class="col-md-2">
+      <div class="well well-lg">
+        <h3>Categories</h3>
+      <% @categories.each do |category| %>
+        <p><%= link_to category.name, category %></p>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div>
