sign in/sign out added to nav

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,18 +15,11 @@
         <li><%= link_to 'First Page', root_path %></li>
         <li><%= link_to 'Me, in details (kinda)', pages_about_path %></li>
         <li><%= link_to 'Me, writing about stuff', posts_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <% if user_signed_in? %>
+          <li>
+          <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+          </li>
+        <% end %>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
