--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,11 +1,17 @@
-<%= simple_form_for(@category) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <%= simple_form_for(@category) do |f| %>
+      
+        <div class="form-inputs">
+          <%= f.input :name %>
+        </div>
+      
+        <div class="form-actions">
+          <%= f.button :submit %>
+        </div>
+      <% end %>      
+    </div>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
