--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-10">
       <%= link_to 'Edit', edit_post_path(@post) if user_signed_in? %>
       <h1><%= @post.title %></h1>
-      <small>Category: <%= link_to @post.category.name, category_path(@post.category) %></small>
+      <small>Category: <%= link_to @post.category.name, category_path(@post.category) %></small> | <small>Post created <%= time_ago_in_words(@post.created_at) %> ago</small>
       <hr>
       <%= image_tag @post.post_image.full.url, class: "img-responsive" %>
       <div style="margin-top: 70px">
