--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,26 +2,40 @@
     <div class="row">
         <div class="col-md-4">
             <%= image_tag 'hipster.jpg', class: "img-responsive" %>
-            <small>Fake hipster glasses, trying to look smarter... #lame</small>
+            <small>Yep, those are fake hipster glasses.</small>
         </div><!-- col-md-4 -->
         <div class="col-md-8">
             <h1>About Me</h1>
-            <h4>Skills:</h4>
-            <p><em>Having fun!</em>
-                <div class="progress progress-striped active">
-                  <div class="progress-bar" style="width: 100%"></div>
-                </div>
-            </p>
-            <p><em>Football/Soccer</em>
-                <div class="progress progress-striped active">
-                  <div class="progress-bar" style="width: 100%"></div>
-                </div>
-            </p>
-            <p><em>Somethjing</em>
-                <div class="progress progress-striped active">
-                  <div class="progress-bar" style="width: 100%"></div>
-                </div>
-            </p>
+            <p>It is a period of ..... apply this below to my storry</p>
+            
+            
+            It is a period of civil war.
+Rebel spaceships, striking
+from a hidden base, have won
+their first victory against
+the evil Galactic Empire.
+
+During the battle, Rebel
+spies managed to steal secret
+plans to the Empire's
+ultimate weapon, the DEATH
+STAR, an armored space
+station with enough power
+to destroy an entire planet.
+
+Pursued by the Empire's
+sinister agents, Princess
+Leia races home aboard her
+starship, custodian of the
+stolen plans that can save her
+people and restore
+freedom to the galaxy....
+            
+            
+            
+            
+            http://goinswriter.com/tell-story/
+            
         </div>
     </div>
 </div>
