--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,6 +2,7 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
+    <%= f.input :short_description %>
     <%= f.input :body, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'Full'} } %>
     <%= f.label "Add Post Image" %>
     <%= f.file_field :post_image %>
