--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Post</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Editing Post</h1>
 
-<%= render 'form' %>
+            <%= render 'form' %>
+            
+            <%= link_to 'Show', @post %> |
+            <%= link_to 'Back', posts_path %>
+        </div>    
+    </div>    
+</div>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+
