added google fonts, disabled user registration (new registrations_controller.rb added)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>Workspace</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
+  <%= google_webfonts_init({
+    google: ['Roboto Slab', 'Roboto']
+  }) %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -27,6 +30,7 @@
 
 <%= render 'layouts/nav' %>
 <%= yield %>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
