--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <h1><%= image_tag 'rostilj.jpg', class: "img-rounded img-responsive", style: "width: 260px; margin: 0px auto;"%></h1>
         <div class="text-center">
-            <p>Hi, I'm Marko. I love learning new things, and I love writing about my learning journey. This blog is intended to share my learning journey and to keep me motivated to learn new things, every day.</p>
+            <p>Hi, I'm Marko. I love learning new things, and I love writing about what I learnt. This blog is intended to share my learning journey and to keep me motivated to learn new things, every day.</p>
             <p>If you see that I am doing something wrong in my approach, code, or anything - I would love to hear from you in comments or email me at marko.manojlovic.bg[at]gmail.com!</p>
             <p><%# link_to "My Storry", pages_about_path, class: "btn btn-primary btn-lg" %></p>
         </div>
