--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,36 +5,12 @@
             <small>Yep, those are fake hipster glasses.</small>
         </div><!-- col-md-4 -->
         <div class="col-md-8">
-            <h1>About Me</h1>
-            <p>It is a period of ..... apply this below to my storry</p>
+            <h1>I'm Marko Manojlovic.</h1>
+            <p>I enjoy learning new things.</p>
+            <hr>
+            <h3>My Storry</h3>
+            <p>I grew up in a small and proud Eastern European country - Serbia. </p>
             
-            
-            It is a period of civil war.
-Rebel spaceships, striking
-from a hidden base, have won
-their first victory against
-the evil Galactic Empire.
-
-During the battle, Rebel
-spies managed to steal secret
-plans to the Empire's
-ultimate weapon, the DEATH
-STAR, an armored space
-station with enough power
-to destroy an entire planet.
-
-Pursued by the Empire's
-sinister agents, Princess
-Leia races home aboard her
-starship, custodian of the
-stolen plans that can save her
-people and restore
-freedom to the galaxy....
-            
-            
-            
-            
-            http://goinswriter.com/tell-story/
             
         </div>
     </div>
