Modified about page, added my projects page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,12 +6,36 @@
         </div><!-- col-md-4 -->
         <div class="col-md-8">
             <h1>I'm Marko Manojlovic.</h1>
-            <p>I enjoy learning new things.</p>
+            <p>Ruby lover. Food lover. Soccer lover. Magic lover.</p>
             <hr>
             <h3>My Storry</h3>
-            <p>I grew up in a small and proud Eastern European country - Serbia. </p>
-            
-            
+            <p>I grew up in Serbia. For you who have no idea what Serbia is - it is a small but proud country in Eastern Europe, just above Greece and next to Bulgaria. If it still doesn't ring a bell - <a href="https://en.wikipedia.org/wiki/Serbia" target="_blank">check this out</a>.</p>
+            <h4>Ancient Days</h4>
+            <p>Since I was a little boy, I was always currious about computers. I rememmber one time, my uncle brought this huge machine home, it was so heavy but so cool! It had a <a href="https://en.wikipedia.org/wiki/Monochrome_monitor" target="_blank">monochrome monitor</a>, a keyboard and a mouse. Nothing else. But hey, it was love at first sight and I knew I will have so much fun with it! Well, at least breaking it.</p>
+            <h4>Moving to Canada</h4>
+            <p>I moved to Canada on November 1st, 2011, on my 27th birthday. I landed in Montreal (QC), at 1:30am, on -10 degrees Celsius. I had no idea where I was, I had some money on me, a huge bag with about 70 poudns of stuff and this phone number of my landlord, who I never met nor spoke to before. Montreal was super fun, my apartment was about 100 square foot but damn it felt good! New country, new opportunities! Btw, I moved to Vancouver when winter rolled in (from +7 celsius to -35 in 24 hours). You can call me any names you want, but hey, I just wasn't prepared for that.</p>
+            <h4>Modern Days</h4>
+            <p>I got interested in Ruby and Ruby on Rails about a two years ago. I tried to learn it by reading some online tutorials, but it got me nowhere. I had a business in making at that time so I decided to postpone my Ruby adventure.</p>
+            <p>About a year ago, business was going nowhere so I thought to myself "Hey, why don't I try Ruby again?". I tried same online tutorials, I was reading and reading and getting more confused. The more I read - the more confused I got. I decided not to give up. I couldn't disapoint myself by quiting when nothing is going in good direction.</p>
+            <p>Today, I am at the stage where I can write some Ruby, make a Rails app from scratch without any tutorials and I'm looking into some more complex stuff, like building my own gems. I am learning testing as well.</p>
+            <h4>OK, thime to wrap it up</h4>
+            <p>I made this blog by myself, as one of my learning projects. I didn't want to use Wordpress or any out-of-the-box platforms out there, just to write some blog posts and pretend that I am smart.</p>
+            <p>
+                My blog has:
+                <ul>
+                    <li>Posts CRUD</li>
+                    <li>Customized Devise (I am the only user and you can't register)</li>
+                    <li>CarrierWave, MiniMagick and Dropbox API for hosting pictures</li>
+                    <li>CKEDITOR for my posts</li>
+                    <li>CKEDITOR CodeSnippet plugin for my code markups in posts</li>
+                    <li>Twitter Bootstrap (because why not?)</li>
+                    <li>FriendlyID for SEO and beautiful URLs</li>
+                    <li>Will Paginate for post pagination</li>
+                    <li>Some security gems</li>
+                    <li>Nice "Roboto" Google font</li>
+                    <li>Hosted on Heroku</li>
+                </ul>
+            </p>
         </div>
     </div>
 </div>
