--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -8,73 +8,64 @@
      <div class="row">
         <div class="col-md-3">
             <h3>Discover City</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About Discover City</p>
-        </div>
-    </div><!-- row -->
-    <div class="row">
         <div class="col-md-3">
             <h3>The Cookie Apps</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About Cookie Apps</p>
-        </div>
-    </div><!-- row -->
-    <div class="row">
         <div class="col-md-3">
             <h3>The Cookie Dining</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About Cookie Dining</p>
-        </div>
-    </div><!-- row -->
-    <div class="row">
         <div class="col-md-3">
             <h3>The Cookie Gateway</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About Cookie Gateway</p>
-        </div>
+        
     </div><!-- row -->
+    
     <div class="row">
         <div class="col-md-3">
             <h3>Tradesgram</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About Tradesgram</p>
-        </div>
-    </div><!-- row -->
-    <div class="row">
         <div class="col-md-3">
             <h3>Mothers Bookkeeping</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About Mothers Bookkeeping</p>
-        </div>
-    </div><!-- row -->
-    <div class="row">
         <div class="col-md-3">
             <h3>PBC Zap</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About PBC Zap</p>
-        </div>
-    </div><!-- row -->
-    <div class="row">
         <div class="col-md-3">
             <h3>HipsterDolly</h3>
-        </div>
-        <div class="col-md-9">
-            <p>About HipsterDolly</p>
+            <p>Ruby on Rails, SpreeCommerce, Heroku</p>
         </div>
     </div><!-- row -->
+    
     <div class="row">
         <div class="col-md-3">
             <h3>D-Lux Design</h3>
+            <p>Ruby on Rails, SpreeCommerce, Heroku</p>
         </div>
-        <div class="col-md-9">
-            <p>About D-Lux Design</p>
+        <div class="col-md-3">
+            <h3>Student Jobs</h3>
+            <p>Ruby on Rails, Heroku</p>
+        </div>
+        <div class="col-md-3">
+            <h3>Just Cool Socks</h3>
+            <p>Wordpress</p>
+        </div>
+        <div class="col-md-3">
+            <h3>Projectify</h3>
+            <p>Ruby on Rails, Heroku</p>
         </div>
     </div><!-- row -->
+    <hr>
+    <div class="row" style="margin-top: 30px;">
+        <h1>Looking for a developer?</h1>
+        <p>I am currently open to contract work of all kinds! Say hi via <a href="https://ca.linkedin.com/in/marko-manojlović-b1b73029
+" target="_blank">LinkedIn</a> or write to me at marko.manojlovic.bg[at]gmail.com</p>
+    </div>
 </div>
