--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,7 +13,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'About Me', pages_about_path %></li>
+        <li><%= link_to 'About Me', about_path %></li>
+        <li><%= link_to 'My Projects', projects_path %></li>
         <li><%= link_to 'Blog', posts_path %></li>
         <% if user_signed_in? %>
           <li>
