--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,6 +11,7 @@
         </div>
         <div class="col-md-6" style="text-align: right;">
             <p>Yes, this is yet another 'Built with <i class="fa fa-heart" style="color: red;"></i> using Bootstrap' website.</p>
+            <p><small>Feel free to use anything from this website, if you find it useful. <a href="http://www.urbandictionary.com/define.php?term=sharing+is+caring" target="_blank">Sharing is caring</a>.</small></p>
         </div>
     </div>
 </footer>
