--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -63,7 +63,7 @@
         </div>
     </div><!-- row -->
     <hr>
-    <div class="row" style="margin-top: 30px;">
+    <div class="row">
         <h1>Looking for a developer?</h1>
         <p>I am currently open to contract work of all kinds! Say hi via <a href="https://ca.linkedin.com/in/marko-manojlović-b1b73029
 " target="_blank">LinkedIn</a> or write to me at marko.manojlovic.bg[at]gmail.com</p>
