--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -8,58 +8,224 @@
      <div class="row">
         <div class="col-md-3">
             <h3>Discover City</h3>
-            <p>Ruby on Rails, Heroku</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+
         </div>
         <div class="col-md-3">
             <h3>The Cookie Apps</h3>
-            <p>Ruby on Rails, Heroku</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
         <div class="col-md-3">
             <h3>The Cookie Dining</h3>
-            <p>Ruby on Rails, Heroku</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "html-5-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "css-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "js-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "digital-ocean-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
         <div class="col-md-3">
             <h3>The Cookie Gateway</h3>
-            <p>Ruby on Rails, Heroku</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "html-5-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "css-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "js-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "digital-ocean-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
         
     </div><!-- row -->
     
-    <div class="row">
-        <div class="col-md-3">
-            <h3>Tradesgram</h3>
-            <p>Ruby on Rails, Heroku</p>
-        </div>
-        <div class="col-md-3">
-            <h3>Mothers Bookkeeping</h3>
-            <p>Ruby on Rails, Heroku</p>
-        </div>
-        <div class="col-md-3">
-            <h3>PBC Zap</h3>
-            <p>Ruby on Rails, Heroku</p>
-        </div>
+    <div class="row" style="margin-top: 30px;">
         <div class="col-md-3">
             <h3>HipsterDolly</h3>
-            <p>Ruby on Rails, SpreeCommerce, Heroku</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "spree-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-3">
+            <h3>D-Lux Design</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "spree-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-3">
+            <h3>Tradesgram</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "amazon-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-3">
+            <h3>Student Jobs</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
     </div><!-- row -->
     
-    <div class="row">
+    <div class="row" style="margin-top: 30px;">
         <div class="col-md-3">
-            <h3>D-Lux Design</h3>
-            <p>Ruby on Rails, SpreeCommerce, Heroku</p>
+            <h3>Mothers Bookkeeping</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
         <div class="col-md-3">
-            <h3>Student Jobs</h3>
-            <p>Ruby on Rails, Heroku</p>
+            <h3>PBC Zap</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
-        <div class="col-md-3">
-            <h3>Just Cool Socks</h3>
-            <p>Wordpress</p>
-        </div>
+        
         <div class="col-md-3">
             <h3>Projectify</h3>
-            <p>Ruby on Rails, Heroku</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
+            <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+            </div>
         </div>
     </div><!-- row -->
     <hr>
